--- a/info/style.css
+++ b/info/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=DM+Sans:opsz,wght@9..40,400;9..40,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,700;1,9..40,400&display=swap');
 
 .heading h1 {
   font-family: 'Playfair Display', serif;
@@ -70,6 +70,7 @@
   justify-content: center;
   gap: 16px;
   font-size: smaller;
+  font-style: italic;
 }
 
 .steps {
