Justify .ingredients-steps centrally

--- a/info/style.css
+++ b/info/style.css
@@ -48,7 +48,7 @@
 .ingredients-steps {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 16px;
 }
 
