--- a/home/style.css
+++ b/home/style.css
@@ -4,7 +4,7 @@ body {
     background-image: linear-gradient(70deg,
             rgba(0, 0, 0, 0.6),
             rgba(0, 0, 0, 0.2)),
-            url('./pizza.jpg');
+            url('../images/pizza.jpg');
 
 
         background-size: cover;
@@ -89,4 +89,7 @@ h1 {
     margin-right: 15px;
 }
 
+.big-gap {
+    margin-top: 50px; /* adjust this value as needed */
+}
 
