--- a/style.css
+++ b/style.css
@@ -1,95 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
-    background-image: linear-gradient(70deg,
-            rgba(0, 0, 0, 0.6),
-            rgba(0, 0, 0, 0.2)),
-            url('../images/pizza.jpg');
+  background-image: linear-gradient(
+      70deg,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url('./images/pizza.jpg');
 
-
-        background-size: cover;
-        background-position: center;
+  background-size: cover;
+  background-position: center;
 }
 h1 {
-    font-family: 'Playfair Display', serif;
-    font-weight: 1000;
-    font-style: italic;
-    letter-spacing: 5px;
-    font-size: 50px;
-    
+  font-family: 'Playfair Display', serif;
+  font-weight: 1000;
+  font-style: italic;
+  letter-spacing: 5px;
+  font-size: 50px;
 }
 .large-text {
-    font-size: 20rem;
-    text-align: center;
+  font-size: 20rem;
+  text-align: center;
 }
 
 h2 {
-    font-family: 'Playfair Display', serif;
-    font-weight: 1000;
-    font-style: italic;
-    letter-spacing: 5px;
-    font-size: 50px;
-    
+  font-family: 'Playfair Display', serif;
+  font-weight: 1000;
+  font-style: italic;
+  letter-spacing: 5px;
+  font-size: 50px;
 }
 
 h1.display-1 {
-    font-size: 4rem; 
-    justify-content: center;
-    text-align: center; 
+  font-size: 4rem;
+  justify-content: center;
+  text-align: center;
 }
-
 
 /*   our favourite food  */
 .text-uppercase {
-    font-family: 'Playfair Display', serif;
-    color: #b2bfeb; 
-    font-size: 2rem; 
-    font-weight: bold; 
-    display: flex;
-    justify-content: center;
-
-    
+  font-family: 'Playfair Display', serif;
+  color: #b2bfeb;
+  font-size: 2rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
 }
 .button-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-
-
 .btn.btn-outline-warning:hover {
-    color: #333333; 
-    background-color: #899fdc; 
+  color: #333333;
+  background-color: #899fdc;
 }
 
 /* Changing the text color for "The best dish in the whole wide world!" */
 main p {
-    color: #eae1e1; 
-        font-family: 'Playfair Display', serif;
-        font-weight: 100;
-        font-style: italic;
-        letter-spacing: 5px;
-        font-size: 2rem;
-        text-align: center; 
-    
-        
+  color: #eae1e1;
+  font-family: 'Playfair Display', serif;
+  font-weight: 100;
+  font-style: italic;
+  letter-spacing: 5px;
+  font-size: 2rem;
+  text-align: center;
 }
 
 h1 {
-    font-family: 'Playfair Display', serif;
-    font-weight: 1000;
-    font-style: italic;
-    letter-spacing: 5px;
-    font-size: 20rem;
-    
+  font-family: 'Playfair Display', serif;
+  font-weight: 1000;
+  font-style: italic;
+  letter-spacing: 5px;
+  font-size: 20rem;
 }
 
-
 .social-icons i {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .big-gap {
-    margin-top: 50px; /* adjust this value as needed */
+  margin-top: 50px; /* adjust this value as needed */
 }
-
